Getting Started With TensorFlow

--- a/00-00-hello-python.ipynb
+++ b/00-00-hello-python.ipynb
@@ -847,6 +847,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    \n",
+    "    def __init__(self, petname, temp):\n",
+    "        self.name = petname\n",
+    "        self.temperature = temp\n",
+    "        \n",
+    "    def status(self):\n",
+    "        print(\"dog name is\", self.name)\n",
+    "        print(\"dog temperature is\", self.temperature)\n",
+    "        \n",
+    "    def setTemperature(self, temp):\n",
+    "        self.temperature = temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dog name is Lassie\n",
+      "dog temperature is 37\n"
+     ]
+    }
+   ],
+   "source": [
+    "lassie = Dog(\"Lassie\", 37)\n",
+    "lassie.status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dog name is Lassie\n",
+      "dog temperature is 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "lassie.setTemperature(40)\n",
+    "lassie.status()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
