getting started... Korean transration...

--- a/01-01-getting-started-with-tensorflow-ko.ipynb
+++ b/01-01-getting-started-with-tensorflow-ko.ipynb
@@ -4,37 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting Started With TensorFlow\n",
-    "[original documentation](https://www.tensorflow.org/get_started/get_started)"
+    "# TensorFlow 시작하기\n",
+    "[원본 문서](https://www.tensorflow.org/get_started/get_started)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This guide gets you started programming in TensorFlow. Before using this guide, [install TensorFlow](https://www.tensorflow.org/install/). To get the most out of this guide, you should know the following:\n",
+    "이 가이드는 TensorFlow에서 프로그래밍을 시작하도록 안내합니다. 이 설명서를 사용하기 전에, [TensorFlow를 설치하십시오](https://www.tensorflow.org/install/). 이 가이드를 최대한 활용하려면, 다음 사항들을 알아야 합니다:\n",
     "\n",
-    "* How to program in Python.\n",
-    "* At least a little bit about arrays.\n",
-    "* Ideally, something about machine learning. However, if you know little or nothing about machine learning, then this is still the first guide you should read.\n",
+    "* 파이썬(Python)으로 프로그래밍하는 법.\n",
+    "* 적어도 배열에 대한 약간의 지식.\n",
+    "* 이상적으로는, 기계 학습에 관한 것입니다. 그러나, 기계 학습에 대해 거의 또는 전혀 알지 못하는 경우에도, 이것이 그래도 읽어야 할 첫 번째 가이드입니다.\n",
     "\n",
-    "TensorFlow provides multiple APIs. The lowest level API--TensorFlow Core-- provides you with complete programming control. We recommend TensorFlow Core for machine learning researchers and others who require fine levels of control over their models. The higher level APIs are built on top of TensorFlow Core. These higher level APIs are typically easier to learn and use than TensorFlow Core. In addition, the higher level APIs make repetitive tasks easier and more consistent between different users. A high-level API like tf.estimator helps you manage data sets, estimators, training and inference.\n",
+    "TensorFlow는 여러 API들을 제공합니다. 최저 수준의 API--TensorFlow Core--는 완벽한 프로그래밍 제어를 제공합니다. TensorFlow Core는 기계 학습 연구자 및 모델을 정밀하게 제어해야 하는 사람들을 위해 권장됩니다. 높은 수준의 API는 TensorFlow Core 위에 구축됩니다. 이러한 상위 수준의 API는 일반적으로 TensorFlow Core보다 배우고 사용하기가 쉽습니다. 또한 상위 수준의 API는 반복적인 작업을 여러 사용자간에 보다 쉽고 일관되게 만듭니다. tf.estimator와 같은 고급 API를 통해 데이터 셋, 추정자(estimator), 학습 및 추론을 처리할 수 있습니다.\n",
     "\n",
-    "This guide begins with a tutorial on TensorFlow Core. Later, we demonstrate how to implement the same model in tf.estimator. Knowing TensorFlow Core principles will give you a great mental model of how things are working internally when you use the more compact higher level API."
+    "이 안내서는 TensorFlow Core에 대한 자습서로 시작됩니다. 나중에, tf.estimator에서 동일한 모델을 구현하는 방법을 보여줍니다. TensorFlow Core의 원리를 아는 것은 보다 간결한 고수준의 API를 사용할 때 내부적으로 어떤 일이 일어나는 지에 대한 훌륭한 개념 모델을 제공합니다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tensors"
+    "# 텐서(Tensors)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The central unit of data in TensorFlow is the **tensor**. A tensor consists of a set of primitive values shaped into an array of any number of dimensions. A tensor's **rank** is its number of dimensions. Here are some examples of tensors:"
+    "TensorFlow 데이터의 중심 단위는 **텐서(tensor)**입니다. 텐서는 임의의 차원 배열 구조(shape)인 원시 값들(primitive values)의 집합으로 구성됩니다. 텐서의 **순위(rank)**는 차원 수입니다. 다음은 텐서들의 몇 가지 예입니다:"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TensorFlow Core tutorial\n",
+    "## TensorFlow 핵심 자습서\n",
     "<hr/>"
    ]
   },
@@ -129,14 +129,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing TensorFlow"
+    "### TensorFlow 가져 오기"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The canonical import statement for TensorFlow programs is as follows:"
+    "TensorFlow 프로그램에 대한 표준 import 문은 다음과 같습니다:"
    ]
   },
   {
@@ -154,26 +154,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This gives Python access to all of TensorFlow's classes, methods, and symbols. Most of the documentation assumes you have already done this."
+    "이렇게하면 파이썬은 TensorFlow의 모든 클래스, 메소드 및 심볼에 접근 할 수 있습니다. 대부분의 문서에서는 이미 이 작업을 수행했다고 가정합니다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Computational Graph"
+    "### 연산 그래프"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You might think of TensorFlow Core programs as consisting of two discrete sections:\n",
+    "TensorFlow 핵심 프로그램은 두 개의 분리된 부분으로 구성되어 있다고 생각할 수 있습니다:\n",
     "\n",
-    "1. Building the computational graph.\n",
-    "2. Running the computational graph.\n",
+    "1. 연산 그래프의 작성.\n",
+    "2. 연산 그래프의 실행.\n",
     "\n",
-    "A **computational graph** is a series of TensorFlow operations arranged into a graph of nodes. Let's build a simple computational graph. Each node takes zero or more tensors as inputs and produces a tensor as an output. One type of node is a constant. Like all TensorFlow constants, it takes no inputs, and it outputs a value it stores internally. We can create two floating point Tensors <mark>node1</mark> and <mark>node2</mark> as follows:"
+    "**연산 그래프**는 일련의 TensorFlow 작업을 노드 그래프로 배열한 것입니다. 간단한 연산 그래프를 작성해 봅시다. 각 노드는 0 이상의 텐서를 입력으로 사용하고 텐서를 출력으로 생성합니다. 노드의 한 유형은 상수입니다. 모든 TensorFlow 상수와 마찬가지로, 입력을 받지 않으며, 내부적으로 저장하는 값을 출력합니다. 다음과 같이 두 개의 부동 소수점 텐서 <mark>node1</mark>과 <mark>node2</mark>를 생성 할 수 있습니다:"
    ]
   },
   {
@@ -199,16 +199,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final print statement produces ↑"
+    "마지막 출력 문의 결과는 ↑"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that printing the nodes does not output the values <mark>3.0</mark> and <mark>4.0</mark> as you might expect. Instead, they are nodes that, when evaluated, would produce 3.0 and 4.0, respectively. To actually evaluate the nodes, we must run the computational graph within a **session**. A session encapsulates the control and state of the TensorFlow runtime.\n",
+    "노드의 출력이 아마도 예상했을 값 <mark>3.0</mark>과 <mark>4.0</mark>로 출력되지 않는다는 점에 주목하십시오. 대신, 평가시에, 각각 3.0과 4.0를 생성하는 노드입니다. 노드를 실제로 평가하려면 **세션(session)** 내에서 연산 그래프를 실행해야합니다. 세션은 TensorFlow 런타임의 제어(control)와 상태(state)를 캡슐화합니다.\n",
     "\n",
-    "The following code creates a <mark>Session</mark> object and then invokes its <mark>run</mark> method to run enough of the computational graph to evaluate <mark>node1</mark> and <mark>node2</mark>. By running the computational graph in a session as follows:"
+    "다음 코드는 <mark>Session</mark> 객체를 만든 다음 <mark>run</mark> 메소드를 호출하여 <mark>node1</mark>과 <mark>node2</mark>를 계산할 수있는 연산 그래프를 실행합니다. 다음과 같이 세션에서 연산 그래프를 실행하면:"
    ]
   },
   {
@@ -235,14 +235,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we see the expected values of 3.0 and 4.0: ↑"
+    "예상했던 값인 3.0과 4.0가 나타납니다: ↑"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can build more complicated computations by combining <mark>Tensor</mark> nodes with operations (Operations are also nodes). For example, we can add our two constant nodes and produce a new graph as follows:"
+    "<marker>Tensor</marker> 노드들을 작업(작업 또한 노드입니다)들과 결합하여 보다 복잡한 연산을 만들 수 있습니다. 예를 들어, 두 개의 상수 노드를 추가하여 다음과 같이 새 그래프를 생성 할 수 있습니다:"
    ]
   },
   {
@@ -269,16 +269,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The last two print statements produce ↑"
+    "마지막 두 개의 출력 문의 결과입니다 ↑"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TensorFlow provides a utility called TensorBoard that can display a picture of the computational graph. Here is a screenshot showing how TensorBoard visualizes the graph:\n",
+    "TensorFlow는 연산 그래프의 그림을 표시하는 TensorBoard라는 유틸리티를 제공합니다. 다음은 TensorBoard가 그래프를 시각화하는 방법을 보여주는 스크린 샷입니다:\n",
     "<img alt=\"TensorBoard screenshot\" src=\"https://www.tensorflow.org/images/getting_started_add.png\">\n",
-    "As it stands, this graph is not especially interesting because it always produces a constant result. A graph can be parameterized to accept external inputs, known as **placeholders**. A **placeholder** is a promise to provide a value later."
+    "이대로, 이 그래프는 항상 동일한 결과를 산출하기 때문에 특별히 흥미롭지는 않습니다. **자리 표시자(placeholder)**라고 하는 외부 입력을 허용하도록 그래프를 파라미터화(parameterized) 할 수 있습니다. **자리 표시자**는 나중에 값을 제공하겠다는 약속입니다."
    ]
   },
   {
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The preceding three lines are a bit like a function or a lambda in which we define two input parameters (a and b) and then an operation on them. We can evaluate this graph with multiple inputs by using the feed_dict argument to the [run method](https://www.tensorflow.org/api_docs/python/tf/Session#run) to feed concrete values to the placeholders:"
+    "위의 세 줄은 함수 또는 람다와 비슷하지만 두 개의 입력 파라미터들(a와 b)을 정의한 다음 해당 파라미터들에 대한 연산을 정의합니다. [run 메소드](https://www.tensorflow.org/api_docs/python/tf/Session#run)에 feed_dict 인수를 사용하여 구체적인 값을 자리 표시자에 공급함으로써 이 그래프가 여러 입력에 대해 평가할 수 있도록 합니다:"
    ]
   },
   {
@@ -324,16 +324,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "resulting in the output ↑"
+    "출력 결과 ↑"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In TensorBoard, the graph looks like this:\n",
+    "텐서보드(TensorBoard)에서 그래프는 다음과 같습니다:\n",
     "<img alt=\"TensorBoard screenshot\" src=\"https://www.tensorflow.org/images/getting_started_adder.png\">\n",
-    "We can make the computational graph more complex by adding another operation. For example,"
+    "다른 연산을 추가하여 연산 그래프를 더 복잡하게 만들 수 있습니다. 예를 들어,"
    ]
   },
   {
@@ -358,16 +358,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "produces the output ↑"
+    "은 출력을 만듭니다 ↑"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The preceding computational graph would look as follows in TensorBoard:\n",
+    "앞의 연산 그래프는 TensorBoard에서 다음과 같이 나타납니다:\n",
     "<img alt=\"TensorBoard screenshot\" src=\"https://www.tensorflow.org/images/getting_started_triple.png\">\n",
-    "In machine learning we will typically want a model that can take arbitrary inputs, such as the one above. To make the model trainable, we need to be able to modify the graph to get new outputs with the same input. **Variables** allow us to add trainable parameters to a graph. They are constructed with a type and initial value:"
+    "기계 학습에서 우리는 일반적으로 위와 같은 임의의 입력을 취할 수있는 모델을 원할 것입니다. 모델을 학습 가능하게 만들려면, 동일한 입력으로 새로운 출력을 얻기 위해 그래프를 수정할 수 있어야 합니다. **변수**를 사용하면 그래프에 학습 가능한 파라미터를 추가 할 수 있습니다. 그것들은 타입과 초기 값으로 구성됩니다:"
    ]
   },
   {
@@ -388,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Constants are initialized when you call <mark>tf.constant</mark>, and their value can never change. By contrast, variables are not initialized when you call <mark>tf.Variable</mark>. To initialize all the variables in a TensorFlow program, you must explicitly call a special operation as follows:"
+    "상수는 <mark>tf.constant</mark>를 호출할 때 초기화되며 값은 절대로 변경될 수 없습니다. 반대로 <mark>tf.Variable</mark>을 호출하면 변수가 초기화되지 않습니다. TensorFlow 프로그램의 모든 변수를 초기화하려면 다음과 같이 특수한 작업을 명시적으로 호출해야합니다:"
    ]
   },
   {
@@ -407,9 +407,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is important to realize <mark>init</mark> is a handle to the TensorFlow sub-graph that initializes all the global variables. Until we call <mark>sess.run</mark>, the variables are uninitialized.\n",
+    "<mark>init</mark>이 모든 전역 변수를 초기화하는 TensorFlow 하위 그래프의 기회임을 인식하는 것이 중요합니다. <mark>sess.run</mark>을 호출할 때까지 변수는 초기화되지 않습니다.\n",
     "\n",
-    "Since <mark>x</mark> is a placeholder, we can evaluate <mark>linear_model</mark> for several values of <mark>x</mark> simultaneously as follows:"
+    "<mark>x</mark>는 자리표시자(placeholder)이므로 다음과 같이 <mark>x</mark>의 여러 값에 대해 <mark>linear_model</mark>을 동시에 평가할 수 있습니다:"
    ]
   },
   {
@@ -433,16 +433,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "to produce the output ↑"
+    "출력을 만듭니다 ↑"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We've created a model, but we don't know how good it is yet. To evaluate the model on training data, we need a <mark>y</mark> placeholder to provide the desired values, and we need to write a loss function.\n",
+    "우리는 모델을 만들었지만, 아직 얼마나 좋은지 모릅니다. 교육 데이터에 대한 모델을 평가하려면, 원하는 값을 제공하기 위해 <mark>y</mark> 자리표시자가 필요하며, 손실 함수(loss function)를 작성해야합니다.\n",
     "\n",
-    "A loss function measures how far apart the current model is from the provided data. We'll use a standard loss model for linear regression, which sums the squares of the deltas between the current model and the provided data. <mark>linear_model - y</mark> creates a vector where each element is the corresponding example's error delta. We call <mark>tf.square</mark> to square that error. Then, we sum all the squared errors to create a single scalar that abstracts the error of all examples using <mark>tf.reduce_sum</mark>:"
+    "손실 함수는 제공된 모델로부터 현재 모델이 얼마나 떨어져 있는지를 측정합니다. 현재 모델과 제공된 데이터 사이의 델타 제곱을 합한 선형 회귀분석(linear regression)에 표준 손실 모델(standard loss model)을 사용합니다. <mark>linear_model - y</mark>는 각 요소에 해당하는 예의 오차 델타 벡터를 만듭니다. <mark>tf.square</mark>를 호출하여 오차를 제곱합니다. 그런 다음, <mark>tf.reduce_sum</mark>을 사용해, 모든 오차의 제곱을 합함으로써 모든 예들의 오차를 대표(abstract)하는 단일 스칼라를 만듭니다:"
    ]
   },
   {
@@ -469,14 +469,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "producing the loss value ↑"
+    "손실 값을 만듭니다 ↑"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We could improve this manually by reassigning the values of <mark>W</mark> and <mark>b</mark> to the perfect values of -1 and 1. A variable is initialized to the value provided to <mark>tf.Variable</mark> but can be changed using operations like <mark>tf.assign</mark>. For example, <mark>W=-1</mark> and <mark>b=1</mark> are the optimal parameters for our model. We can change <mark>W</mark> and <mark>b</mark> accordingly:"
+    "<mark>W</mark>와 <mark>b</mark>를 정확한 값들인 -1과 1로 재할당하여 수동으로 향상시킬 수 있습니다. 변수는 <mark>tf.Variable</mark>을 통해 초기화되지만 <mark>tf.assign</mark>과 같은 연산을 사용해 변경할 수 있습니다. 예를 들어, <mark>W=-1</mark>과 <mark>b=1</mark>은 우리 모델에서 최적의 파라미터들입니다. <mark>W</mark>와 <mark>b</mark>를 적절하게 변경할 수 있습니다:"
    ]
   },
   {
@@ -503,14 +503,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final print shows the loss now is zero. ↑"
+    "마지막 출력은 손실이 0임을 보여줍니다. ↑"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We guessed the \"perfect\" values of <mark>W</mark> and <mark>b</mark>, but the whole point of machine learning is to find the correct model parameters automatically. We will show how to accomplish this in the next section."
+    "우리는 <mark>W</mark>와 <mark>b</mark>의 \"정확한\" 값들을 추측했지만, 기계 학습의 요점은 올바른 모델 파라미터들을 자동으로 찾는 것입니다. 다음 절에서 이것을 이루는 방법을 보여주겠습니다."
    ]
   },
   {
