Getting Started With TensorFlow

--- a/01-01-getting-started-with-tensorflow-ko.ipynb
+++ b/01-01-getting-started-with-tensorflow-ko.ipynb
@@ -367,7 +367,7 @@
    "source": [
     "앞의 연산 그래프는 TensorBoard에서 다음과 같이 나타납니다:\n",
     "<img alt=\"TensorBoard screenshot\" src=\"https://www.tensorflow.org/images/getting_started_triple.png\">\n",
-    "기계 학습에서 우리는 일반적으로 위와 같은 임의의 입력을 취할 수있는 모델을 원할 것입니다. 모델을 학습 가능하게 만들려면, 동일한 입력으로 새로운 출력을 얻기 위해 그래프를 수정할 수 있어야 합니다. **변수**를 사용하면 그래프에 학습 가능한 파라미터를 추가 할 수 있습니다. 그것들은 타입과 초기 값으로 구성됩니다:"
+    "기계 학습에서 우리는 일반적으로 위와 같은 임의의 입력을 취할 수 있는 모델을 원할 것입니다. 모델을 학습 가능하게 만들려면, 동일한 입력으로 새로운 출력을 얻기 위해 그래프를 수정할 수 있어야 합니다. **변수**를 사용하면 그래프에 학습 가능한 파라미터를 추가할 수 있습니다. 그것들은 타입과 초기 값으로 구성됩니다:"
    ]
   },
   {
@@ -407,9 +407,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<mark>init</mark>이 모든 전역 변수를 초기화하는 TensorFlow 하위 그래프의 기회임을 인식하는 것이 중요합니다. <mark>sess.run</mark>을 호출할 때까지 변수는 초기화되지 않습니다.\n",
+    "<mark>init</mark>이 TensorFlow 하위 그래프에 모든 전역 변수를 초기화하는 기회임을 인식하는 것이 중요합니다. <mark>sess.run</mark>을 호출할 때까지 변수는 초기화되지 않습니다.\n",
     "\n",
-    "<mark>x</mark>는 자리표시자(placeholder)이므로 다음과 같이 <mark>x</mark>의 여러 값에 대해 <mark>linear_model</mark>을 동시에 평가할 수 있습니다:"
+    "<mark>x</mark>는 자리 표시자이므로, 다음과 같이 <mark>x</mark>의 여러 값들에 대해 <mark>linear_model</mark>을 동시에 평가할 수 있습니다:"
    ]
   },
   {
@@ -440,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "우리는 모델을 만들었지만, 아직 얼마나 좋은지 모릅니다. 교육 데이터에 대한 모델을 평가하려면, 원하는 값을 제공하기 위해 <mark>y</mark> 자리표시자가 필요하며, 손실 함수(loss function)를 작성해야합니다.\n",
+    "우리는 모델을 만들었지만, 아직 얼마나 좋은지 모릅니다. 교육 데이터에 대한 모델을 평가하려면, 원하는 값을 제공하기 위해 <mark>y</mark> 자리 표시자가 필요하며, 손실 함수(loss function)를 작성해야 합니다.\n",
     "\n",
     "손실 함수는 제공된 모델로부터 현재 모델이 얼마나 떨어져 있는지를 측정합니다. 현재 모델과 제공된 데이터 사이의 델타 제곱을 합한 선형 회귀분석(linear regression)에 표준 손실 모델(standard loss model)을 사용합니다. <mark>linear_model - y</mark>는 각 요소에 해당하는 예의 오차 델타 벡터를 만듭니다. <mark>tf.square</mark>를 호출하여 오차를 제곱합니다. 그런 다음, <mark>tf.reduce_sum</mark>을 사용해, 모든 오차의 제곱을 합함으로써 모든 예들의 오차를 대표(abstract)하는 단일 스칼라를 만듭니다:"
    ]
