Getting Started With TensorFlow

--- a/01-01-getting-started-with-tensorflow-ko.ipynb
+++ b/01-01-getting-started-with-tensorflow-ko.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "이 가이드는 TensorFlow에서 프로그래밍을 시작하도록 안내합니다. 이 설명서를 사용하기 전에, [TensorFlow를 설치하십시오](https://www.tensorflow.org/install/). 이 가이드를 최대한 활용하려면, 다음 사항들을 알아야 합니다:\n",
+    "이 안내서는 TensorFlow에서 프로그래밍을 시작하도록 안내합니다. 이 안내서를 사용하기 전에, [TensorFlow를 설치하십시오](https://www.tensorflow.org/install/). 이 가이드를 최대한 활용하려면, 다음 사항들을 알아야 합니다:\n",
     "\n",
     "* 파이썬(Python)으로 프로그래밍하는 법.\n",
     "* 적어도 배열에 대한 약간의 지식.\n",
@@ -525,7 +525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A complete discussion of machine learning is out of the scope of this tutorial. However, TensorFlow provides **optimizers** that slowly change each variable in order to minimize the loss function. The simplest optimizer is **gradient descent**. It modifies each variable according to the magnitude of the derivative of loss with respect to that variable. In general, computing symbolic derivatives manually is tedious and error-prone. Consequently, TensorFlow can automatically produce derivatives given only a description of the model using the function <mark>tf.gradients</mark>. For simplicity, optimizers typically do this for you. For example,"
+    "기계 학습에 대한 완전한 논의는 본 자습서의 범위를 벗어납니다. 하지만, TensorFlow는 손실 함수를 최소화하기 위해 각 변수를 조금씩 변경하는 **옵티마이저(optimizer)**들을 제공합니다. 가장 간단한 옵티마이저는 **경사 하강(gradient descent)**입니다. 해당 변수의 손실에 대한 미분 크기에 따라 각 변수를 수정합니다. 일반적으로, 수작업으로 계산하는 것은 지루하고 오류가 발생하기 쉽습니다. 따라서, TensorFlow는 <mark>tf.gradients</mark> 함수를 사용하여 주어진 모델에 대한 기술만으로 미분값을 자동으로 생성할 수 있습니다. 단순화 하자면, 옵티마이저가 일반적으로 이를 수행합니다. 예를 들어,"
    ]
   },
   {
