Getting Started With TensorFlow

--- a/01-01-getting-started-with-tensorflow-ko.ipynb
+++ b/01-01-getting-started-with-tensorflow-ko.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +173,7 @@
     "1. 연산 그래프의 작성.\n",
     "2. 연산 그래프의 실행.\n",
     "\n",
-    "**연산 그래프**는 일련의 TensorFlow 작업을 노드 그래프로 배열한 것입니다. 간단한 연산 그래프를 작성해 봅시다. 각 노드는 0 이상의 텐서를 입력으로 사용하고 텐서를 출력으로 생성합니다. 노드의 한 유형은 상수입니다. 모든 TensorFlow 상수와 마찬가지로, 입력을 받지 않으며, 내부적으로 저장하는 값을 출력합니다. 다음과 같이 두 개의 부동 소수점 텐서 <mark>node1</mark>과 <mark>node2</mark>를 생성 할 수 있습니다:"
+    "**연산 그래프**는 일련의 TensorFlow 작업을 노드 그래프로 배열한 것입니다. 간단한 연산 그래프를 작성해 봅시다. 각 노드는 0 이상의 텐서를 입력으로 사용하고 텐서를 출력으로 생성합니다. 노드의 한 유형은 상수입니다. 모든 TensorFlow 상수와 마찬가지로, 입력을 받지 않으며, 내부적으로 저장하는 값을 출력합니다. 다음과 같이 두 개의 부동 소수점 텐서 `node1`과 `node2`를 생성 할 수 있습니다:"
    ]
   },
   {
@@ -185,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Const_6:0\", shape=(), dtype=float32) Tensor(\"Const_7:0\", shape=(), dtype=float32)\n"
+      "Tensor(\"Const:0\", shape=(), dtype=float32) Tensor(\"Const_1:0\", shape=(), dtype=float32)\n"
      ]
     }
    ],
@@ -206,14 +206,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "노드의 출력이 아마도 예상했을 값 <mark>3.0</mark>과 <mark>4.0</mark>로 출력되지 않는다는 점에 주목하십시오. 대신, 평가시에, 각각 3.0과 4.0를 생성하는 노드입니다. 노드를 실제로 평가하려면 **세션(session)** 내에서 연산 그래프를 실행해야합니다. 세션은 TensorFlow 런타임의 제어(control)와 상태(state)를 캡슐화합니다.\n",
+    "노드의 출력이 아마도 예상했을 값 `3.0`과 `4.0`로 출력되지 않는다는 점에 주목하십시오. 대신, 평가시에, 각각 3.0과 4.0를 생성하는 노드입니다. 노드를 실제로 평가하려면 **세션(session)** 내에서 연산 그래프를 실행해야합니다. 세션은 TensorFlow 런타임의 제어(control)와 상태(state)를 캡슐화합니다.\n",
     "\n",
-    "다음 코드는 <mark>Session</mark> 객체를 만든 다음 <mark>run</mark> 메소드를 호출하여 <mark>node1</mark>과 <mark>node2</mark>를 계산할 수있는 연산 그래프를 실행합니다. 다음과 같이 세션에서 연산 그래프를 실행하면:"
+    "다음 코드는 `Session` 객체를 만든 다음 `run` 메소드를 호출하여 `node1`과 `node2`를 계산할 수있는 연산 그래프를 실행합니다. 다음과 같이 세션에서 연산 그래프를 실행하면:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -242,12 +242,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<marker>Tensor</marker> 노드들을 작업(작업 또한 노드입니다)들과 결합하여 보다 복잡한 연산을 만들 수 있습니다. 예를 들어, 두 개의 상수 노드를 추가하여 다음과 같이 새 그래프를 생성 할 수 있습니다:"
+    "`Tensor` 노드들을 작업(작업 또한 노드입니다)들과 결합하여 보다 복잡한 연산을 만들 수 있습니다. 예를 들어, 두 개의 상수 노드를 추가하여 다음과 같이 새 그래프를 생성 할 수 있습니다:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -388,15 +388,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "상수는 <mark>tf.constant</mark>를 호출할 때 초기화되며 값은 절대로 변경될 수 없습니다. 반대로 <mark>tf.Variable</mark>을 호출하면 변수가 초기화되지 않습니다. TensorFlow 프로그램의 모든 변수를 초기화하려면 다음과 같이 특수한 작업을 명시적으로 호출해야합니다:"
+    "상수는 `tf.constant`를 호출할 때 초기화되며 값은 절대로 변경될 수 없습니다. 반대로 `tf.Variable`을 호출하면 변수가 초기화되지 않습니다. TensorFlow 프로그램의 모든 변수를 초기화하려면 다음과 같이 특수한 작업을 명시적으로 호출해야합니다:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "init = tf.global_variables_initializer()\n",
@@ -407,14 +405,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<mark>init</mark>이 TensorFlow 하위 그래프에 모든 전역 변수를 초기화하는 기회임을 인식하는 것이 중요합니다. <mark>sess.run</mark>을 호출할 때까지 변수는 초기화되지 않습니다.\n",
+    "`init`이 TensorFlow 하위 그래프에 모든 전역 변수를 초기화하는 기회임을 인식하는 것이 중요합니다. `sess.run`을 호출할 때까지 변수는 초기화되지 않습니다.\n",
     "\n",
-    "<mark>x</mark>는 자리 표시자이므로, 다음과 같이 <mark>x</mark>의 여러 값들에 대해 <mark>linear_model</mark>을 동시에 평가할 수 있습니다:"
+    "`x`는 자리 표시자이므로, 다음과 같이 `x`의 여러 값들에 대해 `linear_model`을 동시에 평가할 수 있습니다:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -442,12 +440,12 @@
    "source": [
     "우리는 모델을 만들었지만, 아직 얼마나 좋은지 모릅니다. 교육 데이터에 대한 모델을 평가하려면, 원하는 값을 제공하기 위해 <mark>y</mark> 자리 표시자가 필요하며, 손실 함수(loss function)를 작성해야 합니다.\n",
     "\n",
-    "손실 함수는 제공된 모델로부터 현재 모델이 얼마나 떨어져 있는지를 측정합니다. 현재 모델과 제공된 데이터 사이의 델타 제곱을 합한 선형 회귀분석(linear regression)에 표준 손실 모델(standard loss model)을 사용합니다. <mark>linear_model - y</mark>는 각 요소에 해당하는 예의 오차 델타 벡터를 만듭니다. <mark>tf.square</mark>를 호출하여 오차를 제곱합니다. 그런 다음, <mark>tf.reduce_sum</mark>을 사용해, 모든 오차의 제곱을 합함으로써 모든 예들의 오차를 대표(abstract)하는 단일 스칼라를 만듭니다:"
+    "손실 함수는 제공된 모델로부터 현재 모델이 얼마나 떨어져 있는지를 측정합니다. 현재 모델과 제공된 데이터 사이의 델타 제곱을 합한 선형 회귀분석(linear regression)에 표준 손실 모델(standard loss model)을 사용합니다. `linear_model - y`는 각 요소에 해당하는 예의 오차 델타 벡터를 만듭니다. `tf.square`를 호출하여 오차를 제곱합니다. 그런 다음, `tf.reduce_sum`을 사용해, 모든 오차의 제곱을 합함으로써 모든 예들의 오차를 대표(abstract)하는 단일 스칼라를 만듭니다:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -476,12 +474,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<mark>W</mark>와 <mark>b</mark>를 정확한 값들인 -1과 1로 재할당하여 수동으로 향상시킬 수 있습니다. 변수는 <mark>tf.Variable</mark>을 통해 초기화되지만 <mark>tf.assign</mark>과 같은 연산을 사용해 변경할 수 있습니다. 예를 들어, <mark>W=-1</mark>과 <mark>b=1</mark>은 우리 모델에서 최적의 파라미터들입니다. <mark>W</mark>와 <mark>b</mark>를 적절하게 변경할 수 있습니다:"
+    "`W`와 `b`를 정확한 값들인 -1과 1로 재할당하여 수동으로 향상시킬 수 있습니다. 변수는 `tf.Variable`을 통해 초기화되지만 `tf.assign`과 같은 연산을 사용해 변경할 수 있습니다. 예를 들어, `W=-1`과 `b=1`은 우리 모델에서 최적의 파라미터들입니다. `W`와 `b`를 적절하게 변경할 수 있습니다:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "우리는 <mark>W</mark>와 <mark>b</mark>의 \"정확한\" 값들을 추측했지만, 기계 학습의 요점은 올바른 모델 파라미터들을 자동으로 찾는 것입니다. 다음 절에서 이것을 이루는 방법을 보여주겠습니다."
+    "우리는 `W`와 `b`의 \"정확한\" 값들을 추측했지만, 기계 학습의 요점은 올바른 모델 파라미터들을 자동으로 찾는 것입니다. 다음 절에서 이것을 이루는 방법을 보여주겠습니다."
    ]
   },
   {
@@ -530,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -542,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
